<resources>
    <string name="app_name">Blood Glucose Diary</string>
    <string name="title_activity_settings">Settings</string>
    <string name="alarm_options_remind_me">Remind me in another ...</string>
    <string name="alarm_options_short">15 minutes</string>
    <string name="alarm_options_medium">30 minutes</string>
    <string name="alarm_options_long">60 minutes</string>
    <string name="alarm_options_snooze_button">Snooze</string>
    <string name="alarm_options_nevermind_button">Nevermind, I\'ll enter my readings now.</string>
    <string name="entry_details_blood_sugar_hint">Blood Sugar</string>
    <string name="entry_details_weight_hint">Weight</string>
    <string name="entry_details_took_morning_meds">Took Morning Meds</string>
    <string name="entry_details_took_evening_meds">Took Evening Meds</string>
    <string name="history_click_to_make_entry">Click the pencil below to make an entry</string>
    <string name="history_no_items_no_entries_yet">No entries yet.</string>
    <string name="diary_entry_item_pm">PM</string>
    <string name="diary_entry_item_am">AM</string>
    <string name="diary_entry_item_weight">Weight</string>
    <string name="diary_entry_item_meds_taken">Meds Taken</string>
    <string name="diary_entry_item_bgl_reading">BGL Reading</string>
    <string name="diary_alarm_take_sugar_and_weight_readings">Take Sugar and Weight Readings</string>
    <string name="notification_diary_alarm_snooze_button">Snooze</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
